Fix movement, assistance visibility

--- a/assets/css/TypingGame/styles.sass
+++ b/assets/css/TypingGame/styles.sass
@@ -12,3 +12,5 @@
 	width: 100%
 
 #game-canvas
+	height: 100%
+	width: 100%
